# nginx-sphinx

./: .gitignore  LICENSE  Makefile  README.md  make.bat  setup.cfg  setup.py
src/nginx_sphinx/: __init__.py  footer.html  header.html  layout.html  sidebar.html  theme.conf
src/nginx_sphinx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nginx_sphinx/includes/: breadcrumb.html  head.html  products-menu.html
src/nginx_sphinx/static/: globaltoc.html
src/nginx_sphinx/static/css/: f5-hugo.css
