[metadata]
name = nginx_sphinx
version = 2.0.0
author = NGINX, an F5 company
description = A sphinx theme used to build NGINX documentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nginxinc/docs-nginx-com
classifiers = 
  Framework :: Sphinx
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache 2.0
  Operating System :: OS Independent
  Topic :: Documentation

[options]
package_dir = 
  = src
packages = find:

python_requires = >=3.6

[options.packages.find]
where = src
